k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: support-desk
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: support-desk-sa
      containers:
        - name: worker
          image:  124990256338.dkr.ecr.us-east-1.amazonaws.com/support-desk-worker:latest
          
          livenessProbe:
            exec:
              command: ["python", "-c", "import boto3"]
            initialDelaySeconds: 30
            periodSeconds: 60
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
